--- a/.gitignore
+++ b/.gitignore
@@ -279,7 +279,9 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+#Extras
+auth_user
+auth_user_data
 # End of https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode,linux,macos,python,venv
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
-
